--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocketstar",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.16.6",
+    "@vercel/postgres": "^0.9.0",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "typescript": "^5"
   }
 }
