--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@vercel/postgres": "^0.9.0",
     "next": "14.2.5",
