--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@mui/styles": "^5.16.6",
     "@vercel/postgres": "^0.9.0",
     "next": "14.2.5",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18"
   },
