--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+MONGODB_URI =''
 psql "postgres://default:************@ep-autumn-dust-a4lvg3g2.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_DATABASE="verceldb"
 POSTGRES_HOST="ep-autumn-dust-a4lvg3g2-pooler.us-east-1.aws.neon.tech"
