--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.6",
     "@mui/styles": "^5.16.6",
     "@vercel/postgres": "^0.9.0",
+    "mongodb": "^6.20.0",
     "next": "14.2.5",
     "prop-types": "^15.8.1",
     "react": "^18",
