--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGODB_URI=mongodb+srv://rocketuser:<db_password>@cluster0.vth613o.mongodb.net/?appName=Cluster0
+MONGODB_URI=mongodb+srv://rocketuser:<db_password>@cluster0.vth613o.mongodb.net/rocketstarDB?appName=Cluster0
 # Nome do banco de dados para o Mongoose usar
-MONGODB_DB=Cluster0
+#MONGODB_DB=Cluster0
 #psql "postgres://default:************@ep-autumn-dust-a4lvg3g2.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 #POSTGRES_DATABASE="verceldb"
 #POSTGRES_HOST="ep-autumn-dust-a4lvg3g2-pooler.us-east-1.aws.neon.tech"
