registro admin ok

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://rocketuser:<db_password>@cluster0.vth613o.mongodb.net/rocketstarDB?appName=Cluster0
+MONGODB_URI=mongodb+srv://rocketuser:r2r8x4r5@cluster0.vth613o.mongodb.net/rocketstarDB?appName=Cluster0
 # Nome do banco de dados para o Mongoose usar
 #MONGODB_DB=Cluster0
 #psql "postgres://default:************@ep-autumn-dust-a4lvg3g2.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
